fix and add validation date
fix some issues in absence
after QA
add - another date validation
fix the color of the btn with validate the date

--- a/Road to Recovery/pages/documentedAbsenceModal.html
+++ b/Road to Recovery/pages/documentedAbsenceModal.html
@@ -49,14 +49,14 @@
                             <tr>
                                 <td class="rightCol">מתאריך <span class="redTxt">*</span></td>
                                 <td class="leftCol">
-                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePickerFrom" type="date"  />
+                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePickerFrom" type="date" />
                                 </td>
                             </tr>
 
                             <tr>
                                 <td class="rightCol">עד תאריך <span class="redTxt">*</span></td>
                                 <td class="leftCol">
-                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePickerUntil" type="date"  />
+                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePickerUntil" type="date" />
                                 </td>
                             </tr>
 
@@ -81,15 +81,15 @@
                             <tr>
                                 <td class="rightCol">הערות</td>
                                 <td class="leftCol">
-                                    <textarea  id="DocumentAAbsence_writeContent" maxlength="400" placeholder="&lt;מלל חופשי עד 155 תווים&gt;"></textarea>
+                                    <textarea id="DocumentAAbsence_writeContent" maxlength="400" placeholder="&lt;מלל חופשי עד 155 תווים&gt;"></textarea>
                                 </td>
                             </tr>
                             <tr>
-
                             </tr>
                         </table>
                         <span id="DocumentAAbsence_contentErrorMsg" class="redTxt">יש למלא את כל שדות החובה (*)</span>
                         <span id="DocumentAAbsence_CoordinatorErrorMsg" class="redTxt">יש לבחור טווח תאריכים הגיוני</span>
+                        <span id="DocumentAAbsence_DatesError" class="redTxt">תאריך החזרה חלף, יש לבחור תאריך חזרה עתידי</span>
 
                     </div>
                     <div class="text-right modal-footer">
