fix and update absence

--- a/Road to Recovery/pages/documentedAbsenceModal.html
+++ b/Road to Recovery/pages/documentedAbsenceModal.html
@@ -88,7 +88,7 @@
                             </tr>
                         </table>
                         <span id="DocumentAAbsence_contentErrorMsg" class="redTxt">יש למלא את כל שדות החובה (*)</span>
-                        <span id="DocumentAAbsence_CoordinatorErrorMsg" class="redTxt">יש לבחור טווח תאריכים הגיוני</span>
+                        <span id="DocumentAAbsence_CoordinatorErrorMsg" class="redTxt">תאריך התחלה גדול מתאריך החזרה, נא להכניס טווח תקין של תאריכים</span>
                         <span id="DocumentAAbsence_DatesError" class="redTxt">תאריך החזרה חלף, יש לבחור תאריך חזרה עתידי</span>
 
                     </div>
