change color manage ridepat

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -3707,7 +3707,7 @@
 
                                 <div id="accordion" class="panel-group">
                                     <div onclick="assignTable2lastOne(tableNames.MORNING)" class="panel panel-primary">
-                                        <div class="panel-heading" id="col1">
+                                        <div class="panel-heading blue1" id="col1">
                                             <h4 data-toggle="tooltip" data-placement="top"
                                                 title="Morning Rides  سفريات الصباح" class="panel-title">
                                                 <a id="collapsed1_aTag" href="#collapse1" data-parent="#accordion"
@@ -3761,8 +3761,8 @@
                                     </div>
 
                                     <div onclick="assignTable2lastOne(tableNames.AFTERNOON)"
-                                         class="panel panel-primary">
-                                        <div class="panel-heading" id="col2">
+                                         class="panel panel-primary ">
+                                        <div class="panel-heading blue2" id="col2">
                                             <h4 data-toggle="tooltip" data-placement="top"
                                                 title="Afternoon Rides  سفريات المساء" class="panel-title">
                                                 <a id="collapsed2_aTag" href="#collapse2" data-parent="#accordion"
@@ -3816,8 +3816,8 @@
                                     </div>
 
                                     <div onclick="assignTable2lastOne(tableNames.TOMORROW_MORNING)"
-                                         class="panel panel-primary">
-                                        <div class="panel-heading" id="col4">
+                                         class="panel panel-primary ">
+                                        <div class="panel-heading blue3" id="col4">
                                             <h4 data-toggle="tooltip" data-placement="bottom" title="Tomorrow Rides"
                                                 class="panel-title">
                                                 <a id="collapsed3_aTag" href="#collapse3" data-parent="#accordion"
@@ -3873,7 +3873,7 @@
 
                                     <div onclick="assignTable2lastOne(tableNames.TOMORROW_AFTERNOON)"
                                          class="panel panel-primary">
-                                        <div class="panel-heading" id="col4">
+                                        <div class="panel-heading blue4" id="col4">
                                             <h4 data-toggle="tooltip" data-placement="bottom" title="Tomorrow Rides"
                                                 class="panel-title">
                                                 <a id="collapsed3_aTag" href="#collapse4" data-parent="#accordion"
@@ -3928,7 +3928,7 @@
                                     </div>
 
                                     <div onclick="assignTable2lastOne(tableNames.FUTURE)" class="panel panel-primary">
-                                        <div class="panel-heading" id="col3">
+                                        <div class="panel-heading blue5" id="col3">
                                             <h4 data-toggle="tooltip" data-placement="bottom"
                                                 title="Future Rides  سفريات مستقبلية" class="panel-title">
                                                 <a id="collapsed4_aTag" href="#collapse5" data-parent="#accordion"
