--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -198,6 +198,7 @@
 
                     $('#wait').hide();
                     var arr_volunteers = JSON.parse(data.d);
+                    //console.log(arr_volunteers);
                     GENERAL.VOLUNTEERS.setVolunteersList(JSON.stringify(arr_volunteers));
                     for (i in arr_volunteers) {
                         if (driveVol === true && (!arr_volunteers[i].IsDriving)) continue;
@@ -268,10 +269,14 @@
 
 
                         let volunteerTypeAndGender = buildvolunteerTypeAndGenderHTML(arr_volunteers[i].TypeVol, arr_volunteers[i].Gender);
+                        let englishNameVolunteer = ''
+                        if (arr_volunteers[i].EnglishName!='') {
+                            englishNameVolunteer = '<br>'+arr_volunteers[i].EnglishName;
+                        }
 
                         var Volunteer = {
                             Id: arr_volunteers[i].Id,
-                            DisplayName: arr_volunteers[i].DisplayName,
+                            DisplayName: arr_volunteers[i].DisplayName+englishNameVolunteer,
                             TypeVol: volunteerTypeAndGender,
                             CellPhone: arr_volunteers[i].CellPhone,
                             CellPhone2: cellphone2,
@@ -287,6 +292,7 @@
                         }
                         allVolunteersFromDb.push(Volunteer);
                     }
+                    
 
                     tbl = $('#datatable-buttons').DataTable({
                         data: allVolunteersFromDb,
